# temp-rpl

./: .gitignore  README.md  app.py  data.json  pyproject.toml  requirements.in
assets/: risk_factor_png_source.drawio
covid_app/: core.py  dataset.py  validation.py
tests/: conftest.py  test_core.py  test_validation.py
