[tool.poetry]
name = "swe-mlops-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
attrs = "^21.2.0"
cattrs = "^1.8.0"
pytest = "^6.2.4"
requests = "^2.26.0"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
